<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:orientation="vertical"
    tools:context=".Main3Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textView_1"
            android:background="#f20"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#FDC400"
            android:text="@string/textView_2"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFCC"
                android:text="@string/textView_3"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#D507FA"
                android:text="@string/textView_4"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2600FF"
            android:text="@string/textView_5"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="@color/colorWhite">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FF5A00"
            android:text="@string/textView_6"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#26FF00"
            android:text="7"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</LinearLayout>