<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".Main2Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#f20"
        android:layout_weight="1"
        android:text="@string/textView_1"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="40sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC100"
            android:text="@string/textView_2"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="40sp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="3"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="#08FFE1"
                    android:text="@string/textView_3"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textColor="@color/colorWhite"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="#F506ED"
                    android:layout_weight="1"
                    android:text="@string/textView_4"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#0E35CC"
                    android:text="@string/textView_5"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>