<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main4Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#54F509"
            android:text="@string/textView_1"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FF2A00"
                android:text="@string/textView_3"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#773A22"
                android:text="@string/textView_4"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="40sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#837C7C"
            android:text="@string/textView_2"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:weightSum="3"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#00FFA6"
                    android:text="@string/textView_5"
                    android:textSize="40sp"
                    android:gravity="center"
                     android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#610781"
                    android:text="@string/textView_6"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#f20"
                    android:text="7"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#996937"
                    android:text="8"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#DAD0CD"
                    android:text="9"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>